--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "namasthe-react",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "react-scripts start"
@@ -14,6 +13,7 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "parcel": "^2.12.0"
+    "parcel": "^2.12.0",
+    "process": "^0.11.10"
   }
 }
